src/main/java/org/sample/variable/VarTest.java
package org.sample.variable;

public class VarTest {
	
	public static void main(String[] args) {
	
		//init variable
        int age = 18;
		System.out.println("age = " + age); // age = 18
		
		System.out.println("-----------------------------------------------------");

		//String name;
		//System.out.println("name = " + name); // error: need init
		String name = "Ææµã";
		System.out.println("name = " + name); // name = Ææµã
		// can't duplicate init variable with already exists name
		//int age = 17;
		int aGe = 17;
		int fjakjf3fjdlakjfa7987jfkdajlkf2427897fdjafjalkl89809fdjafjlj = 10;
	}
} 